Changes height on body to min-height so page in hopes of page to stop jumping when opening menu

--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,7 @@
 
 body {
   position: relative;
-  width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 html, body {
